infrastructure/optional/elasticsearch/k8s/03-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "elasticsearch"
  namespace: "infrastructure"
  labels:
    app.kubernetes.io/name: "elasticsearch"
    app.kubernetes.io/managed-by: "local"
    onedatascan.com/deployment-stage: "infrastructure"
    app.kubernetes.io/version: "7.8.1"
    app.kubernetes.io/component: "elasticsearch"
    app.kubernetes.io/part-of: "infrastructure"
spec:
  replicas: 1
  serviceName: "elasticsearch"
  selector:
    matchLabels:
      app.kubernetes.io/name: "elasticsearch"
  template:
    metadata:
      annotations:
        app.kubernetes.io/instance: "elasticsearch"
        app.kubernetes.io/name: "elasticsearch"
        app.kubernetes.io/managed-by: "local"
        onedatascan.com/deployment-stage: "infrastructure"
        app.kubernetes.io/version: "7.8.1"
        app.kubernetes.io/component: "elasticsearch"
        app.kubernetes.io/part-of: "infrastructure"
      labels:
        app.kubernetes.io/instance: "elasticsearch"
        app.kubernetes.io/name: "elasticsearch"
        app.kubernetes.io/managed-by: "local"
        onedatascan.com/deployment-stage: "infrastructure"
        app.kubernetes.io/version: "7.8.1"
        app.kubernetes.io/component: "elasticsearch"
        app.kubernetes.io/part-of: "infrastructure"
    spec:
      serviceAccountName: "elasticsearch"
      containers:
      - name: app
        image: docker.elastic.co/elasticsearch/elasticsearch:7.8.1
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 9200
        - containerPort: 9300
        livenessProbe:
          httpGet:
            path: /_cat/health
            port: 9200
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: elastic-data
          mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      annotations:
        volume.alpha.kubernetes.io/storage-class: anything
      name: "elastic-data"
      namespace: "infrastructure"
      labels:
        app.kubernetes.io/instance: "elasticsearch"
        app.kubernetes.io/name: "elasticsearch"
        app.kubernetes.io/version: "7.8.1"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "microk8s-hostpath"
      resources:
        requests:
          storage: 5Gi
