infrastructure/optional/elasticsearch/k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: "elasticsearch"
  namespace: "infrastructure"
  labels:
    app.kubernetes.io/name: "elasticsearch"
    app.kubernetes.io/managed-by: "local"
    app.kubernetes.io/version: "7.8.1"
    app.kubernetes.io/component: "elasticsearch"
    app.kubernetes.io/part-of: "infrastructure"
spec:
  ports:
  - name: rest
    port: 80
    protocol: TCP
    targetPort: 9200
  selector:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/instance: elasticsearch
